# scalpel

./: .gitignore  .prettierrc.json  Makefile  README.md  eslint.config.js  package.json  pyproject.toml  scalpel.code-workspace  scalpel.config.json  setup.sh  shell.nix  tsconfig.base.json  turbo.json
scripts/: create.ts
